retrieve/objects/Async_Aggregate_Calc__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Async Aggregate Calcs</relationshipLabel>
        <relationshipName>Async_Aggregate_Calcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_rides__c</fullName>
        <label>Number of rides</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Async Aggregate Calcs</relationshipLabel>
        <relationshipName>Async_Aggregate_Calcs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Async Aggregate Calc</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Product__c</columns>
        <columns>Number_of_rides__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AAC-{00000}</displayFormat>
        <label>Async Aggregate Calc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Aggregate Calcs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>